--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -24,7 +24,9 @@ jobs:
     - name: remove source files
       run: rm -rf *
     - name: build html files
-      run: python -m pdoc ezspreadsheet --html --force
+      run: |
+        python -m pdoc ezspreadsheet --html --force
+        mv ezspreadsheet.html index.html
 
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
