--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -26,7 +26,7 @@ jobs:
     - name: build html files
       run: |
         python -m pdoc ezspreadsheet --html --force
-        mv "ezspreadsheet.html" "index.html"
+        mv "html/ezspreadsheet.html" "html/ezspreadsheet.html"
 
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
